# DSAN5400_final_project

./: .gitattributes  .gitignore  CHANGELOG.md  DSAN_5400_Final_News_Recommender_Training.ipynb  Dynamic_indexing_and_querying.ipynb  LICENSE  README.html  README.md  colbert_test.ipynb  install_dependacies.py  main.py  model_training.py  pyproject.toml  search_results.json
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
experiments/dsan5400_project/indexes/dsan5400_project.nbits=2/: plan.json  sample.0.pt  sample.1.pt
experiments/dsan5400_project/indexes/dsan5400_project_nbits=2/: plan.json
experiments/notebook/indexes/dsan5400_project.nbits=2/: plan.json
sentiment/: sentiment.ipynb  sentiment.py  sentiment_analysis.ipynb
src/article_scraping/: __init__.py  article_collection.py  article_scraper.py  build_corpus.py  collect_articles.py  scrape_articles.py  testing.ipynb
src/article_scraping/data/: corpus_info.csv
src/model_training_colab/: DSAN_5400_Final_News_Recommender_Training.ipynb  Dynamic_indexing_and_querying.ipynb
src/sentiment/: sentiment.ipynb  sentiment.py
tests/: indices_test.csv  test_news_recommendation_final_project.py
