[tool.poetry]
name = "news_recommendation_final_project"
version = "0.1.0"
description = "A Pproject for creating and offering news article recommendations to broaden readers' universe of news media."
authors = ["Jared Zirkes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
